--- a/app/assets/stylesheets/modules/product_index.scss
+++ b/app/assets/stylesheets/modules/product_index.scss
@@ -28,6 +28,7 @@
         &__Image {
           .soldOut_flg{
             position: absolute;
+            z-index: 10;
           }
           .relationImg {
             width: 220px;
