--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -183,7 +183,8 @@ body{
             .comment-form {
               text-align: center;
               &__text-form {
-                width: 100%;
+                resize: none;
+                width: 590px;
                 padding: 10px;
                 margin-top: 10px;
                 font-size: 16px;
