--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -110,24 +110,21 @@ body{
             .report{
               margin-top: 10px;
               .likeBtn{
-                display: flex;
+                display: block;
+                cursor: pointer;
                 border: 1px solid #ffb340;
                 border-radius: 40px;
                 padding: 6px 10px;
                 color: #3CCACE;
-                line-height: 25px;
-
                 .starBtn{
                   text-decoration: none;
                   color: #3CCACE;
                   background-color: #fff;
                   border: none;
-                  
                 }
                 .starIcon{
                   font-size: 0.8em;
                   color: #3CCACE;
-                  line-height: 25px;
 
                 }
               }
@@ -135,6 +132,8 @@ body{
                 opacity: 0.5;
               }
               .reportBtn{
+                display: block;
+                cursor: pointer;
                 font-size: 14px;
                 border: 1px solid #333;
                 border-radius: 4px;
