--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -116,11 +116,14 @@ body{
                 border-radius: 40px;
                 padding: 6px 10px;
                 color: #3CCACE;
+                .nonStarBtn{
+                  text-decoration: none;
+                  color: red;
+                }
                 .starBtn{
                   text-decoration: none;
                   color: #3CCACE;
                   background-color: #fff;
-                  border: none;
                 }
                 .starIcon{
                   font-size: 0.8em;
@@ -130,6 +133,9 @@ body{
               }
               .likeBtn:hover{
                 opacity: 0.5;
+              }
+              li.already{
+                border: 1px solid red;
               }
               .reportBtn{
                 display: block;
