--- a/app/views/favorites/_favorite.html.haml
+++ b/app/views/favorites/_favorite.html.haml
@@ -1,10 +1,10 @@
 - if Favorite.find_by(user_id: current_user.id, product_id: @product.id)
   .report
     %li.likeBtn.already
-      = icon('fa', 'star starIcon')
-      = link_to "お気に入り　削除", product_favorite_path(@product, product.id), class: "starBtn", method: :delete
+      ⭐️
+      = link_to "お気に入り　削除", product_favorite_path(@product, product.id), class: "nonStarBtn", remote: true, method: :delete
 - else
   .report
-    %li.likeBtn.none
-      = icon('fa', 'star starIcon')
-      = link_to "お気に入り　登録", product_favorites_path(@product), class: "starBtn", method: :post
+    %li.LikeBtn.none 
+      ⭐️
+      = link_to "お気に入り　登録", product_favorites_path(@product), class: "starBtn", remote: true, method: :post
