--- a/app/views/favorites/_favorite.html.haml
+++ b/app/views/favorites/_favorite.html.haml
@@ -1,10 +1,11 @@
-- if Favorite.find_by(user_id: current_user.id, product_id: @product.id)
-  .report
-    %li.likeBtn.already
-      ⭐️
-      = link_to "お気に入り", product_favorite_path(@product, product.id), class: "nonStarBtn", remote: true, method: :delete
-- else
-  .report
-    %li.LikeBtn.none 
-      ★
-      = link_to "お気に入り", product_favorites_path(@product), class: "starBtn", remote: true, method: :post
+- if user_signed_in?
+  - if Favorite.find_by(user_id: current_user.id, product_id: @product.id)
+    .report
+      %li.likeBtn.already
+        ⭐️
+        = link_to "お気に入り", product_favorite_path(@product, product.id), class: "nonStarBtn", remote: true, method: :delete
+  - else
+    .report
+      %li.LikeBtn.none 
+        ★
+        = link_to "お気に入り", product_favorites_path(@product), class: "starBtn", remote: true, method: :post
