--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -142,7 +142,7 @@
                         = "¥#{number_with_delimiter(kind.price)}"
                       .productField__ProductBox__Info__Ele__Favorite
                         ⭐️
-                        0
+                        = kind.favorites.length
                     .productField__ProductBox__Info__Tax
                       (税込)
 
