--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -20,6 +20,6 @@
                     = "¥#{number_with_delimiter(product.price)}"
                   .productField__ProductBox__Info__Ele__Favorite
                     ⭐️
-                    0
+                    = product.favorites.length
                 .productField__ProductBox__Info__Tax
                   (税込)
