購入画面修正

--- a/app/views/products/purchase.html.haml
+++ b/app/views/products/purchase.html.haml
@@ -43,6 +43,7 @@
                       有効期限　：
                       = exp_month + " / " + exp_year
         .Purchase__Info__Box__right
+          = link_to "変更する", ""
 
       %hr
       .Purchase__Info__Box
@@ -59,7 +60,7 @@
             .Purchase__Info__Box__left--ele--name
               = current_user.send_destination.family_name + current_user.send_destination.first_name
         .Purchase__Info__Box__right
-
+          = link_to "変更する", edit_mypage_destination_path(current_user.id)
       %hr
       .Purchase__Info__Submit
         - if @card.blank?
