--- a/app/assets/stylesheets/modules/body_application.scss
+++ b/app/assets/stylesheets/modules/body_application.scss
@@ -44,6 +44,7 @@
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0, 0, 0, 0.05);
   font-weight: bold;
   border: solid 2px #970303;
+  cursor: pointer;
 }
 .Button:active {
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
