--- a/app/views/mypage/cards/index.html.haml
+++ b/app/views/mypage/cards/index.html.haml
@@ -10,22 +10,25 @@
       %hr
     .BodyCard
       .BodyCard__Info
-        - if !@card.blank?
-          - exp_month = @customer_card.exp_month.to_s
-          - exp_year = @customer_card.exp_year.to_s.slice(2,3)
+        - if @cards.blank?
+          .editBtn
+            .message　商品購入には、クレジットカードの登録が必要です
+        - else
           %table.BodyCard__Info--table
             %tbody
-              %tr
-                %td
-                  = image_tag (@card_src), class: 'card_image'
-                  %br
-                  カード番号：
-                  = "**** **** **** " + @customer_card.last4
-                  %br
-                  有効期限　：
-                  = exp_month + " / " + exp_year
-                %td
-                  = link_to "削除する", mypage_card_path(@card.id), method: :delete, class: 'btn_delete-small'
+              - @cards.each do |card|
+                - credit = Card.cardnunmer(card.customer_id, card.card_id)
+                %tr
+                  %td
+                    = image_tag (credit[:src]), class: 'card_image'
+                    %br
+                    カード番号：
+                    = "**** **** **** " + credit[:last4]
+                    %br
+                    有効期限　：
+                    = credit[:exp_month] + " / " + credit[:exp_year]
+                  %td
+                    = link_to "削除する", mypage_card_path(card.id), method: :delete, class: 'btn_delete-small'
 
       .BodyCard--btn
         = link_to "クレジットカードを追加する", new_mypage_card_path, class: 'Button'
