デフォルトカード/ビュー表示

--- a/app/views/mypage/cards/index.html.haml
+++ b/app/views/mypage/cards/index.html.haml
@@ -20,6 +20,13 @@
                 - credit = Card.cardnunmer(card.customer_id, card.card_id)
                 %tr
                   %td
+                    = link_to "", class: "no-underline" do
+                      -if card.default_flg == true
+                        = icon('fas', 'check-circle')
+                        = icon('fas', 'money-check-alt')
+                      - else
+                        = icon('far', 'circle')
+                  %td
                     = image_tag (credit[:src]), class: 'card_image'
                     %br
                     カード番号：
