--- a/app/assets/stylesheets/modules/top_page.scss
+++ b/app/assets/stylesheets/modules/top_page.scss
@@ -193,6 +193,7 @@
       width: 220px;
       background-color: #fff;
       margin: 5px;
+      box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
       .productLink{
         text-decoration: none;
         color: black;
