--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -239,6 +239,7 @@ body{
             width: 220px;
             background-color: #fff;
             margin: 5px;
+            box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
             .productLink{
               text-decoration: none;
               color: black;
