価格入力フォームの表示変更（product_edit）

--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -96,7 +96,7 @@
                   = f.label :price, "価格"
                   %span 必須
                 %td
-                  = f.number_field :price, class: 'form-text', placeholder: ''
+                  = f.number_field :price, class: 'form-text', placeholder: '100円以上から入力可'
 
         .sell__block__form__btn
           %div
