--- a/app/assets/stylesheets/modules/product.scss
+++ b/app/assets/stylesheets/modules/product.scss
@@ -70,6 +70,21 @@
                   height: 40px;
                   width: 100%;
                 }
+                .main_parent {
+                  height: 40px;
+                  width: 100%;
+                  margin: 5px 0 0 0;
+                }
+                .main_children {
+                  height: 40px;
+                  width: 100%;
+                  margin: 5px 0 0 0;
+                }
+                .main_grandchild {
+                  height: 40px;
+                  width: 100%;
+                  margin: 8px 0 0 0;
+                }
               }
             }
           }
