--- a/app/views/favorites/_favorite.html.haml
+++ b/app/views/favorites/_favorite.html.haml
@@ -9,3 +9,7 @@
       %li.LikeBtn.none 
         ★
         = link_to "お気に入り #{@product.favorites.length}", product_favorites_path(@product), class: "starBtn", remote: true, method: :post
+- else
+  .report
+    .logout
+      = "⭐️お気に入り #{@product.favorites.length}"
