--- a/app/assets/stylesheets/modules/product.scss
+++ b/app/assets/stylesheets/modules/product.scss
@@ -73,17 +73,17 @@
                 .main_parent {
                   height: 40px;
                   width: 100%;
-                  margin: 5px 0 0 0;
+                  margin: 5px 0;
                 }
                 .main_children {
                   height: 40px;
                   width: 100%;
-                  margin: 5px 0 0 0;
+                  margin: 5px 0;
                 }
                 .main_grandchild {
                   height: 40px;
                   width: 100%;
-                  margin: 8px 0 0 0;
+                  margin: 5px 0;
                 }
               }
             }
